deployments/k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-service
spec:
  ingressClassName: nginx
  rules:
    - host: proxy-service.local
      http:
        paths:
          - path: /api/proxy
            pathType: Prefix
            backend:
              service:
                name: proxy-api-server
                port:
                  number: 80
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-api-server
                port:
                  number: 80
